# OT4D

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.github/workflows/: python-package.yml
notebooks/: data_exploration.ipynb
notebooks/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
src/ot4d/: __init__.py
src/ot4d/main/: helpers.py  models.py  prepare_data.py  train.py
src/ot4d/misc/: temp.py
tests/ot4d/main/: test_add_to_yaml.py  test_initiaze_model.py
