[project]
name = "ot4d"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.2.1",
    "transformers>=4.38.1",
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "dvc>=3.48.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ot4d"]
