[project]
name = "ot4d"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "torch>=2.2.1",
    "transformers>=4.38.1",
    "scikit-learn>=1.4.1.post1",
    "pandas>=2.2.1",
    "matplotlib>=3.8.3",
    "dvc>=3.48.0",
    "lightning>=2.2.0.post0",
    "tqdm>=4.66.2",
    "jupyterlab>=4.1.2",
    "torchvision>=0.17.1",
    "timm>=0.9.16",
    "dvclive>=3.44.0",
    "pytest>=8.0.2",
    "scikit-image>=0.22.0",
    "scipy>=1.12.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ot4d"]
